Revision history for Rake

{{$NEXT}}

0.0.5  2021-09-08T13:37:48+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address

0.0.4  2021-01-31T12:09:26+01:00
    - Added WHEN NOT TO USE THIS FUNCTIONALITY section in documentation
    - Updated copyright year

0.0.3  2020-11-06T19:00:59+01:00
    - Add support for the :value-type parameter / value types
    - Adapted / expanded tests
    - Add many more examples
    - Made several methods hidden-from-backtrace for better error reporting
    - Added some more return value signatures

0.0.2  2020-05-10T13:07:58+02:00
    - Fix problem with type checking if type checking failed
    - Added tests for incorrect initialization

0.0.1  2020-05-10T12:46:15+02:00
    - Initial version