@@ -8,3 +8,8 @@ filename = lib/Rake.rakumod
 ; match = ^ 'xt/'
 
 [UploadToZef]
+
+[Badges]
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
