@@ -86,35 +86,39 @@ Rake - raking typed values together in a list
 
 =head1 SYNOPSIS
 
-  use Rake;
+=begin code :lang<raku>
 
-  my $foo = Rake[Int,Str,IO].new(42,"bar","filename".IO);
-  say $foo[0];  # id: 42
-  say $foo[1];  # name: bar
-  say $foo[2];  # path: "filename".IO
+use Rake;
 
-  .say for $foo;  # 42␤bar␤"filename".IO␤
+my $foo = Rake[Int,Str,IO].new(42,"bar","filename".IO);
+say $foo[0];  # id: 42
+say $foo[1];  # name: bar
+say $foo[2];  # path: "filename".IO
 
-  say $foo.^name;  # Rake[Int,Str,IO]
+.say for $foo;  # 42␤bar␤"filename".IO␤
 
-  my @bar := Rake[Int,Int].new(42,666);
+say $foo.^name;  # Rake[Int,Str,IO]
 
-  constant RIS = Rake[Int,Str];        # Rakudo < v2020.06
-  my @baz is RIS = 42,"foo";
+my @bar := Rake[Int,Int].new(42,666);
 
-  my @baz is Rake[Int,Str] = 42,"foo"; # Rakudo >= v2020.06
+constant RIS = Rake[Int,Str];        # Rakudo < v2020.06
+my @baz is RIS = 42,"foo";
 
-  class CIS does Rake[Int,Str] { }
-  my @caz is CIS = 42,"foo";
+my @baz is Rake[Int,Str] = 42,"foo"; # Rakudo >= v2020.06
 
-  sub take-rake(Rake[Int,Str] $raked) {
-      say "got: $raked";
-  }
+class CIS does Rake[Int,Str] { }
+my @caz is CIS = 42,"foo";
 
-  sub answers(*@answers) {
-      Rake[Int xx @answers, :value-type].new(@answers)
-  }
-  say (answers(42,666), answers(42,666)).Set.elems;  #1
+sub take-rake(Rake[Int,Str] $raked) {
+  say "got: $raked";
+}
+
+sub answers(*@answers) {
+  Rake[Int xx @answers, :value-type].new(@answers)
+}
+say (answers(42,666), answers(42,666)).Set.elems;  #1
+
+=end code
 
 =head1 DESCRIPTION
 
@@ -136,27 +140,35 @@ This functionality is really intended for B<ad-hoc> data structures, as a
 way to easily prototype or enforce type-checking on some trial code.  For
 production, it is recommended to change each of the C<Rake> cases into an
 actual class with typed attributes: this will help in performance B<and>
-future mantainability.
+future maintainability.
 
 Taking from the example code:
 
-  my $foo = Rake[Int,Str,IO].new(42,"bar","filename".IO);
-  say $foo[0];  # id: 42
-  say $foo[1];  # name: bar
-  say $foo[2];  # path: "filename".IO
+=begin code :lang<raku>
+
+my $foo = Rake[Int,Str,IO].new(42,"bar","filename".IO);
+say $foo[0];  # id: 42
+say $foo[1];  # name: bar
+say $foo[2];  # path: "filename".IO
+
+=end code
 
 for production could be written as:
 
-  class Foo {
-      has Int      $.id;
-      has Str      $.name;
-      has IO::Path $.path;
-  }
+=begin code :lang<raku>
 
-  my $foo = Foo.new(:id(42), :name<bar>, :path("filename".IO));
-  say $foo.id;    # 42
-  say $foo.name;  # bar
-  say $foo.path;  # "filename".IO
+class Foo {
+  has Int      $.id;
+  has Str      $.name;
+  has IO::Path $.path;
+}
+
+my $foo = Foo.new(:id(42), :name<bar>, :path("filename".IO));
+say $foo.id;    # 42
+say $foo.name;  # bar
+say $foo.path;  # "filename".IO
+
+=end code
 
 You will thank yourself in the future!
 
@@ -173,13 +185,17 @@ Elizabeth Mattijsen <liz@raku.rocks>
 Source can be located at: https://github.com/lizmat/Rake . Comments and
 Pull Requests are welcome.
 
+If you like this module, or what I'm doing more generally, committing to a
+L<small sponsorship|https://github.com/sponsors/lizmat/>  would mean a great
+deal to me!
+
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2020, 2021 Elizabeth Mattijsen
+Copyright 2020, 2021, 2024 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under
 the Artistic License 2.0.
 
 =end pod
 
-# vim: ft=perl6 expandtab sw=4
+# vim: expandtab shiftwidth=4
